fix margins on mobile and tablet

--- a/src/assets/sass/_global.scss
+++ b/src/assets/sass/_global.scss
@@ -94,10 +94,23 @@ p.lead {
     margin-left: auto;
     margin-right: auto;
     max-width: 42rem;
+
+    @media (max-width: 900px) {
+      max-width: 100%;
+    }
+
+    @media (max-width: 600px) {
+      padding: 0 10px;
+    }
   }
 }
 
 .next-prev {
+  overflow: auto;
+  @media (max-width: 900px) {
+    padding: 0 10px;
+  }
+
   .prev {
     float: left;
 
@@ -133,6 +146,10 @@ p.lead {
       line-height: 1;
       display: inline;
       font-size: 1.25em;
+
+      @media (max-width: 600px) {
+        font-size: 1em;
+      }
     }
 
     &__arrow {
@@ -142,7 +159,8 @@ p.lead {
 }
 
 .internal-layout__footer {
-  margin-top: 75px;
+  padding: 0 10px;
+  margin-top: 25px;
 
   &-headshot-bio {
     display: flex
