--- a/src/assets/sass/_nav.scss
+++ b/src/assets/sass/_nav.scss
@@ -72,7 +72,7 @@
   }
 
   &__name {
-    line-height: 0;
+    line-height: 1;
     font-size: 1.35rem;
   }
   &__headshot {
