--- a/src/assets/sass/_post.scss
+++ b/src/assets/sass/_post.scss
@@ -1,5 +1,9 @@
 .blog-post {
   padding: 0 20px 20px;
+
+  @media (max-width: 600px) {
+    padding: 0 10px 20px;
+  }
   &__title {
     font-size: 3em;
     line-height: 1.5;
